--- a/css/sub.css
+++ b/css/sub.css
@@ -1,10 +1,14 @@
-
-img {
-    width: 500px;
-}
 section {
     margin: 50px;
 }
 body {
     background-color: aliceblue;
+}
+h1 {
+    font-size: 50px;
+    font-weight: bold;
+    color: darkslategray;
+}
+img {
+    width: 500px;
 }
